Add organizations, organizations management, other

--- a/IRCCS - Pascale/ircss-frontend/src/pages/Organizations.css
+++ b/IRCCS - Pascale/ircss-frontend/src/pages/Organizations.css
@@ -125,3 +125,8 @@ table {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.save-button {
+    padding-top: 12px;
+    padding-bottom: 30px; 
+  }
