[PASTRL-51] irccs customization

--- a/frontend-evaluation/DashboardEvaluation/src/styles-ext.less
+++ b/frontend-evaluation/DashboardEvaluation/src/styles-ext.less
@@ -1,47 +1,47 @@
 h1, h2, h3, h4, h5, h6, label {
-  color: @sti-blue !important;
+  color: @irccs-blue !important;
 }
 
 p {
-  color: @sti-paragraph-color;
+  color: @irccs-paragraph-color;
 }
 
 .ant-card-bordered {
-  border-color: @sti-border-color;
+  border-color: @irccs-border-color;
 }
 
 .ant-divider {
-  background-color: @sti-border-color;
+  background-color: @irccs-border-color;
 }
 
 .ant-btn {
-  color: @sti-blue;
-  border-color: @sti-blue;
+  color: @irccs-blue;
+  border-color: @irccs-blue;
   transition: all .2s;
 
   &:hover {
-    background-color: @sti-red;
-    border-color: @sti-red !important;
+    background-color: @irccs-orange;
+    border-color: @irccs-orange !important;
     color: #fff !important;
   }
 }
 
 .ant-btn-primary {
-  background-color: @sti-blue;
+  background-color: @irccs-blue;
   color: #fff;
 
   &:hover {
-    background-color: @sti-red !important;
+    background-color: @irccs-orange !important;
     color: #fff !important;
   }
 }
 
 .ant-form-item .ant-form-item-label >label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before {
-  color: @sti-red;
+  color: @irccs-orange;
 }
 
 .ant-input-affix-wrapper {
-  border-color: @sti-border-color;
+  border-color: @irccs-border-color;
 }
 
 .ant-layout-header,
@@ -54,30 +54,30 @@ p {
 
   &-header {
     background-color: #fff;
-    color: @sti-blue;
+    color: @irccs-blue;
     padding: 10px;
     height: 65px;
   }
 
   &-sider {
-    background-color: @sti-blue !important;
+    background-color: @irccs-blue !important;
   }
 }
 
 .ant-menu-dark,
 .ant-layout-sider-trigger {
-  background-color: @sti-blue !important;
+  background-color: @irccs-blue !important;
 }
 
 .ant-menu-item-selected,
 .ant-menu-submenu-selected {
-  background-color: @sti-red !important;
+  background-color: @irccs-orange !important;
 }
 
 .dashboard {
 
   &__bg {
-    // background-image: url('./sti/assets/images/logo-sti.png');
+    background-image: url('./irccs/assets/images/logo-pascale.png');
   }
 
 }
@@ -85,7 +85,7 @@ p {
 .ant-table-wrapper {
   .ant-table-thead {
     th {
-      background-color: @sti-blue !important;
+      background-color: @irccs-blue !important;
       color: #fff !important;
 
       .ant-table-column-sorter {
@@ -98,12 +98,12 @@ p {
     .ant-table-row {
       
       &:nth-child(even) {
-        background-color: @sti-blue-10-op !important;
+        background-color: @irccs-blue-10-op !important;
       }
       
       &:hover {
         td {
-          background-color: @sti-blue-25-op !important;
+          background-color: @irccs-blue-25-op !important;
         }
       }
     }
