--- a/frontend-evaluation/DashboardEvaluation/src/colors-ext.less
+++ b/frontend-evaluation/DashboardEvaluation/src/colors-ext.less
@@ -1,6 +1,6 @@
-@sti-red: #CF0D22;
-@sti-blue: #00285D;
-@sti-blue-25-op: #00285D25;
-@sti-blue-10-op: #00285D10;
-@sti-paragraph-color: #2C3138;
-@sti-border-color: #d5d5d5;
+@irccs-orange: #ff7f00;
+@irccs-blue: #1d4165;
+@irccs-blue-25-op: #1d416525;
+@irccs-blue-10-op: #1d416510;
+@irccs-paragraph-color: #777;
+@irccs-border-color: #d5d5d5;
